--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,1 +1,11 @@
-і
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPX</title>
+</head>
+<body>
+    
+</body>
+</html>
