--- a/frontend/templates/index.ejs
+++ b/frontend/templates/index.ejs
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="menu">
-
+        <img class="img_main" src="/static/img/docs.png">
+        <div class="main_button">File name</div>
+        <!-- button menu -->
+        <div class="button_togle">Change color</div>
+        <div class="button_togle">Change color</div>
     </div>
 </body>
 </html>
