--- a/frontend/templates/index.ejs
+++ b/frontend/templates/index.ejs
@@ -7,12 +7,42 @@
     <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
+    <!-- menu -->
     <div class="menu">
         <img class="img_main" src="/static/img/docs.png">
-        <div class="main_button">File name</div>
+        <div class="name_file">File name</div>
         <!-- button menu -->
-        <div class="button_togle">Change color</div>
-        <div class="button_togle">Change color</div>
+        <div class="button_div_menu">
+            <div class="dropdown">
+                <div class="button_togle">Change color</div>
+                <div class="dropdown-content">
+                    <p>Content for Menu 1</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <div class="button_togle">Change color</div>
+                <div class="dropdown-content">
+                    <p>Content for Menu 1</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <div class="button_togle">Change color</div>
+                <div class="dropdown-content">
+                    <p>Content for Menu 1</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="tools"></div>
+    </div>
+    <!-- page -->
+    <div class="page_manage">
+        <p>Page on document</p>
+        <br>
+        <div class="page_unix">Page 1</div>
+    </div>
+    <div class="page">
+f
     </div>
 </body>
 </html>
